@@ -12,12 +12,15 @@ public class FileReporter {
     private File reportFile;
     private String encoding;
 
+    public FileReporter(String encoding) {
+        this(null, encoding);
+    }
+
     public FileReporter(File reportFile) {
         this(reportFile, System.getProperty("file.encoding"));
     }
 
     public FileReporter(File reportFile, String encoding) {
-        if (reportFile == null) throw new NullPointerException("reportFile can not be null");
         this.reportFile = reportFile;
         this.encoding = encoding;
     }
@@ -26,7 +29,13 @@ public class FileReporter {
         try {
             Writer writer = null;
             try {
-                writer = new BufferedWriter(new OutputStreamWriter(new FileOutputStream(reportFile), encoding));
+            	OutputStream outputStream;
+            	if (reportFile == null) {
+            		outputStream = System.out;
+            	} else {
+            		outputStream = new FileOutputStream(reportFile);
+            	}
+                writer = new BufferedWriter(new OutputStreamWriter(outputStream, encoding));
                 writer.write(content);
             } finally {
                 if (writer != null) writer.close();
